integrate middlewear to statically serve files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- This will statically get styles file from public as we have made it
+    statically served -->
+    <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
   </head>
   <body>
