--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,30 @@
 body {
   background-color: bisque;
 }
+
+main {
+  text-align: center;
+}
+
+label {
+  display: block;
+  font-size: 24px;
+  margin: 10px 0px;
+}
+
+input {
+  width: 20%;
+  padding: 12px;
+  margin-bottom: 10px;
+}
+
+button {
+  display: block;
+  margin-top: 20px;
+  padding: 18px 26px;
+  background-color: brown;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  margin: 0 auto;
+}
