--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,15 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Home Of HTMl EJS</h1>
-    <!-- <h2>Welcome <%= name%></h2> -->
-
-    <!--* Good ejs practises to access passed values and not throwing error if key-value pair is not found -->
-    <h2>Welcome <%= locals.name %></h2>
+    <main>
+      <h1>Conatct Now</h1>
+      <form method="post">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" />
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" />
+        <button type="submit">Submit</button>
+      </form>
+    </main>
   </body>
 </html>
